feat: Firebase 호스팅 초기 설정 및 자위소방대 정보 이미지를 추가했습니다.

--- a/index.html
+++ b/index.html
@@ -449,6 +449,10 @@
         <div style="margin-top:15px; font-size: 13px; font-weight: bold; color: #000;">
             ※ 응급구조반은 심폐소생술(CPR) 가능자 또는 보건 담당자로 편성합니다.
         </div>
+        
+        <div style="margin-top: 20px; width: 100%; text-align: center;">
+            <img src="fire_brigade_info.jpg" alt="자위소방대 안전을 위한 조직적 대응" style="max-width: 100%; height: auto; border: 1px solid #ccc;">
+        </div>
     </div>
 </body>
 </html>
