feat: 팀원 정보 및 임무를 수정했습니다.

--- a/index.html
+++ b/index.html
@@ -394,11 +394,11 @@
                 <div class="sub-header">반장</div>
                 <div class="team-row">
                     <div class="team-label">이름</div>
-                    <div class="team-input">김간호</div>
+                    <div class="team-input">최창열</div>
                 </div>
                 <div class="team-row">
                     <div class="team-label">번호</div>
-                    <div class="team-input">010-1234-5678</div>
+                    <div class="team-input">010-3457-1501</div>
                 </div>
 
                 <div class="sub-header">대원</div>
@@ -422,11 +422,11 @@
                 <div class="sub-header">반장</div>
                 <div class="team-row">
                     <div class="team-label">이름</div>
-                    <div class="team-input">최창열</div>
+                    <div class="team-input">김방호</div>
                 </div>
                 <div class="team-row">
                     <div class="team-label">번호</div>
-                    <div class="team-input">010-3457-1501</div>
+                    <div class="team-input">010-6622-4323</div>
                 </div>
 
                 <div class="sub-header">대원</div>
