chore: 팀원 이름과 번호 정보를 업데이트합니다.

--- a/index.html
+++ b/index.html
@@ -292,11 +292,11 @@
                 <div class="sub-header">대원</div>
                 <div class="team-row">
                     <div class="team-label">이름</div>
-                    <div class="team-input">김민수</div>
+                    <div class="team-input">한종현</div>
                 </div>
                 <div class="team-row">
                     <div class="team-label">번호</div>
-                    <div class="team-input">010-1234-5678</div>
+                    <div class="team-input">010-5678-0019</div>
                 </div>
 
                 <div class="duty-box">
