docs: 반장 이름 및 연락처 정보를 업데이트했습니다.

--- a/index.html
+++ b/index.html
@@ -422,11 +422,11 @@
                 <div class="sub-header">반장</div>
                 <div class="team-row">
                     <div class="team-label">이름</div>
-                    <div class="team-input">김방호</div>
+                    <div class="team-input">심화진</div>
                 </div>
                 <div class="team-row">
                     <div class="team-label">번호</div>
-                    <div class="team-input">010-6622-4323</div>
+                    <div class="team-input">010-8621-7789</div>
                 </div>
 
                 <div class="sub-header">대원</div>
