--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                 <div class="sub-header">반장</div>
                 <div class="team-row">
                     <div class="team-label">이름</div>
-                    <div class="team-input">심화진</div>
+                    <div class="team-input">심하진</div>
                 </div>
                 <div class="team-row">
                     <div class="team-label">번호</div>
