chore: 팀원 이름과 전화번호를 업데이트합니다.

--- a/index.html
+++ b/index.html
@@ -320,11 +320,11 @@
                 <div class="sub-header">대원</div>
                 <div class="team-row">
                     <div class="team-label">이름</div>
-                    <div class="team-input">김민수</div>
+                    <div class="team-input">서인정</div>
                 </div>
                 <div class="team-row">
                     <div class="team-label">번호</div>
-                    <div class="team-input">010-1234-5678</div>
+                    <div class="team-input">010-5777-2163</div>
                 </div>
 
                 <div class="duty-box">
