fix: 팀원 이름과 전화번호를 업데이트합니다.

--- a/index.html
+++ b/index.html
@@ -348,11 +348,11 @@
                 <div class="sub-header">대원</div>
                 <div class="team-row">
                     <div class="team-label">이름</div>
-                    <div class="team-input">김민수</div>
+                    <div class="team-input">최병현</div>
                 </div>
                 <div class="team-row">
                     <div class="team-label">번호</div>
-                    <div class="team-input">010-1234-5678</div>
+                    <div class="team-input">010-6532-6516</div>
                 </div>
 
                 <div class="duty-box">
@@ -376,11 +376,11 @@
                 <div class="sub-header">대원</div>
                 <div class="team-row">
                     <div class="team-label">이름</div>
-                    <div class="team-input">김민수</div>
+                    <div class="team-input">김상권</div>
                 </div>
                 <div class="team-row">
                     <div class="team-label">번호</div>
-                    <div class="team-input">010-1234-5678</div>
+                    <div class="team-input">010-9438-0890</div>
                 </div>
 
                 <div class="duty-box">
@@ -404,11 +404,11 @@
                 <div class="sub-header">대원</div>
                 <div class="team-row">
                     <div class="team-label">이름</div>
-                    <div class="team-input">김민수</div>
+                    <div class="team-input">김상인</div>
                 </div>
                 <div class="team-row">
                     <div class="team-label">번호</div>
-                    <div class="team-input">010-1234-5678</div>
+                    <div class="team-input">010-3883-6956</div>
                 </div>
 
                 <div class="duty-box">
@@ -432,11 +432,11 @@
                 <div class="sub-header">대원</div>
                 <div class="team-row">
                     <div class="team-label">이름</div>
-                    <div class="team-input">김민수</div>
+                    <div class="team-input">강정남</div>
                 </div>
                 <div class="team-row">
                     <div class="team-label">번호</div>
-                    <div class="team-input">010-1234-5678</div>
+                    <div class="team-input">010-9340-2095</div>
                 </div>
 
                 <div class="duty-box">
